only use G1